# claude-factory

./: .gitignore  ARCHITECTURE.md  LICENSE  ROADMAP.md  emc.toml  flake.nix  rust-toolchain.toml
.claude-factory/: checks.toml
.claude-factory/events/v1/: 0000000001-ec4cb989-590b-4596-85f2-f0559701990b.json  0000000002-8ab9790c-4e34-4c31-ba2d-27559935ad87.json  0000000003-209d003f-ab48-4db2-a070-cd9f954b6135.json  0000000004-9dd0b4db-4f32-4dc2-8aac-9e4ad84c0327.json  0000000005-81a41568-67fa-4af6-b78e-e5f3362c5748.json  0000000006-26fb2528-d4ef-4423-9002-934cc62f8863.json  0000000007-24c266fd-95ff-4ea0-9f15-e95f778ddddd.json  0000000008-642b3936-ccbb-4c9c-9ff3-91e865132626.json  0000000009-5856ba02-a1d1-4ba2-be65-ff0338cb0016.json  0000000010-336e3abb-ae12-4f75-902a-c5fd19aaf131.json  0000000011-2f1056e4-5b15-460c-8660-98783bff27f6.json  0000000012-8ddaafb4-32f9-4d2e-8b03-9b8a9a2c1e91.json  0000000013-d9c688f4-da58-4d7a-a9ab-b4d4663a4e89.json  0000000014-f8c11fd5-58c9-4a46-8129-a8b9bd995706.json  0000000015-76ad1627-0e6f-4bb0-8aff-8baa2ab23f9d.json  0000000016-fc14290e-6919-4a88-8550-46e390563551.json  0000000017-1d82c059-da95-4f5a-820b-f64f876ee292.json  0000000018-5ea14f3b-dd9e-4071-9047-b6b9cc2924ef.json  0000000019-2e27c14e-6888-4d94-875f-5de2b4a334b6.json  0000000020-2c28c34a-2e4a-4529-a219-11fc67a9a044.json  0000000021-b98b4125-4b72-46e2-9df1-39ef7946d053.json  0000000022-5c6fa59c-390f-4611-9ed8-2d09bbfdb8e4.json  0000000023-807941b5-856a-4806-a150-ec613bad14ec.json  0000000024-deec8b90-7863-4f81-add7-a893510789e9.json  0000000025-743e9409-0b73-446c-8b3c-5c1ef01f1feb.json  0000000026-672e6bf9-941a-49ec-afdf-aab6e4868516.json  0000000027-75292d53-8727-40fb-b458-36ee2a1289c6.json  0000000028-7a06572e-49ed-4268-9210-7346ce3ad398.json  0000000029-dfbd7224-e92e-4629-a09b-75bc29fde906.json  0000000030-1e736aa3-805d-4449-9544-e75cc79b765f.json  0000000031-d67b74f1-e356-4dae-9a53-e74002106fe7.json  0000000032-39261cb2-be4b-4fe7-b027-7a026ccb839a.json  0000000033-4bb3914f-05cc-49c5-8701-7d4ae04e7c92.json  0000000034-c2ce5bed-649d-4c56-b8db-dc4e6fedfa11.json  0000000035-4103ca15-c9e2-4b7d-9a03-9a9f9d99619f.json  0000000036-096b4648-3db9-4a5d-8325-929e973cfffe.json  0000000037-f878922f-ab2d-4268-8bd0-5ea643fcc761.json  0000000038-e8a97688-0766-4ba7-9e25-aff89d65755b.json  0000000039-e1e22d7f-b017-436d-af96-313d80931c9d.json  0000000040-78595345-42e5-4d75-9059-92dfb0235645.json  (+233 more)
.claude-factory/eventstore/: .gitattributes  .gitignore
.claude-factory/eventstore/events/: 019ecd7a-61a1-7050-b977-acac00aab0f0.jsonl  019ecd7a-61b1-7a73-b982-89a205967a8d.jsonl  (+337 more)
.claude-plugin/: marketplace.json
.githooks/: pre-commit
docs/: RUNBOOK.md  SETUP.md  runbook.md
docs/decisions/: 0001-dedicated-mcp-kernel.md  0002-conductor-first-concurrency.md  0003-rust-nightly-kernel.md  0004-full-product-roadmap.md  0005-kernel-owned-routing-table.md  0006-nix-devshell-toolchains.md  0007-emc-from-crates-io.md  0008-m1-hand-rolled-event-log.md  0009-http-mode-evaluation.md  0010-eventcore-fs-event-store.md  0011-per-slice-promotion-chain.md  0012-design-system-component-ownership.md  0013-build-on-demand-dev-loop.md
examples/toy-product/: Cargo.toml
kernel/: Cargo.toml
kernel/crates/cfk-core/: Cargo.toml
kernel/crates/cfk-core/src/: guardrail.rs  lib.rs  promotion.rs  prompts.rs  routing.rs  state_machine.rs  steps.rs  types.rs
kernel/crates/cfk-core/src/state_machine/: architecture.rs  design.rs  discovery.rs  review.rs  tdd.rs  work_item.rs
kernel/crates/cfk-core/src/types/: architecture.rs  design.rs  evidence.rs  forge.rs  gate.rs  ids.rs  lease.rs  metrics.rs  phase.rs  routing.rs  slice.rs  step.rs  tdd.rs
kernel/crates/cfk-engine/: Cargo.toml
kernel/crates/cfk-engine/src/: architecture.rs  checks.rs  commands.rs  config.rs  emc.rs  events.rs  forge.rs  guardrail.rs  lib.rs  loader.rs  project.rs  review.rs  runner.rs  store.rs  tests.rs
kernel/crates/cfk-mcp/: Cargo.toml
kernel/crates/cfk-mcp/src/: main.rs  server.rs
kernel/crates/cfk-mcp/tests/: adr_state_machine.rs  cf_abandon.rs  cf_status_typed.rs  gate_semantics.rs  lease_guardrail.rs  promotion_chain.rs  routing_table.rs  server_tools.rs
model/events/: projection.fingerprint
model/lean/: CfkKernel.lean  ContinueNonInteractiveWorkDuringOpenGate.lean  DeclareWorktreeProvisioningConfig.lean  FirstRunAndNoSnapshotMigration.lean  InspectPendingDecisions.lean  KernelDefersAContendingInteractiveGate.lean  KernelOpensInteractiveGateAndAcquiresLock.lean  KernelResolvesAndReleasesTheGateLock.lean  NoOpWorktreeProvisioningForHermeticProjects.lean  OperatorApprovesAGate.lean  OperatorRejectsAGate.lean  PresentAskHumanGateWithContextHeader.lean  ProvisionWorktreeOnCreation.lean  RecordWhatWasProvisioned.lean  RelaxGuardrailUnderMultiSessionConcurrency.lean  ReplayCostInstrumentationAndThresholdWatch.lean  RunAgentInReadyEnvironment.lean  RunSetupEscapeHatchHook.lean  SnapshotAcceleratedLoader.lean  SnapshotCreationTrigger.lean  SnapshotVersioningAndInvalidation.lean  TearDownWorktreeAndCleanSecrets.lean  ValidateProvisioningConfigOnLoad.lean  lakefile.lean
model/quint/: CfkKernel.qnt  ContinueNonInteractiveWorkDuringOpenGate.qnt  DeclareWorktreeProvisioningConfig.qnt  FirstRunAndNoSnapshotMigration.qnt  InspectPendingDecisions.qnt  KernelDefersAContendingInteractiveGate.qnt  KernelOpensInteractiveGateAndAcquiresLock.qnt  KernelResolvesAndReleasesTheGateLock.qnt  NoOpWorktreeProvisioningForHermeticProjects.qnt  OperatorApprovesAGate.qnt  OperatorRejectsAGate.qnt  PresentAskHumanGateWithContextHeader.qnt  ProvisionWorktreeOnCreation.qnt  RecordWhatWasProvisioned.qnt  RelaxGuardrailUnderMultiSessionConcurrency.qnt  ReplayCostInstrumentationAndThresholdWatch.qnt  RunAgentInReadyEnvironment.qnt  RunSetupEscapeHatchHook.qnt  SnapshotAcceleratedLoader.qnt  SnapshotCreationTrigger.qnt  SnapshotVersioningAndInvalidation.qnt  TearDownWorktreeAndCleanSecrets.qnt  ValidateProvisioningConfigOnLoad.qnt
plugins/claude-factory/: .gitignore  README.md
plugins/emc/: README.md
qa/: cfk_call.py
scripts/: seed-factory.py
(+188 files in other folders)
