[workspace]
resolver = "2"
members = [
    "crates/cfk-core",
    "crates/cfk-engine",
    "crates/cfk-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["John Wilger <john@johnwilger.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/jwilger/claude-factory"

[workspace.dependencies]

# MCP server
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
rmcp-macros = "1.7.0"
schemars = "1"

# Semantic types / newtypes
nutype = { version = "0.7.0", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Template engine for kernel-side prompt templates
tera = "2.0.0-alpha.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Core lint groups — treat as allowlist per https://billylevin.dev/posts/clippy-config/
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Required to avoid the meta-lint on enabling the restriction group
blanket_clippy_restriction_lints = "allow"

# ── Restriction / nursery group triage ───────────────────────────────────────
# Each entry is a deliberate project-policy decision, not a convenience suppress.

# Rust idiom: implicit returns at end of block are idiomatic
implicit_return = "allow"
# `?` is the idiomatic error-propagation operator
question_mark_used = "allow"
# We use flat file naming (state_machine.rs, not state_machine/mod.rs)
self_named_module_files = "allow"
# Re-exports (`pub use`) are standard Rust API design
pub_use = "allow"
# `impl Trait` in params is idiomatic for simple public functions
impl_trait_in_params = "allow"
# Float arithmetic is intentional (veto_rate, avg_tokens calculations)
float_arithmetic = "allow"
# Standard arithmetic without explicit overflow checks is acceptable in this domain
arithmetic_side_effects = "allow"
# Domain enums are exhaustively matched by design; non_exhaustive would break callers
exhaustive_enums = "allow"
# Domain structs are constructed by known code paths; exhaustive is intentional
exhaustive_structs = "allow"
# Single-char identifiers (e, i, x) are idiomatic in closures and math contexts
min_ident_chars = "allow"
# Variable shadowing is acceptable for refinement patterns (re-binding parsed values)
shadow_reuse = "allow"
shadow_unrelated = "allow"
# Non-ASCII characters in string literals (unicode output, emoji) are intentional
non_ascii_literal = "allow"
# We are not targeting no_std environments; `std` is fine
std_instead_of_core = "allow"
# `.to_string()` on &str is idiomatic in non-hot-path code
str_to_string = "allow"
# Private item documentation is not required
missing_docs_in_private_items = "allow"
# `#[inline]` annotations are not required; this is not a WASM/perf-critical lib
missing_inline_in_public_items = "allow"
# `const fn` is not required on all eligible functions
missing_const_for_fn = "allow"
# `as` casts: `cast_precision_loss` and pedantic casts cover the dangerous cases
as_conversions = "allow"
# Item ordering: we follow logical grouping, not strict alphabetical ordering
arbitrary_source_item_ordering = "allow"
# Anonymous trait imports are acceptable
unused_trait_names = "allow"
# Absolute paths in code body: we use `use` statements at module top instead
absolute_paths = "allow"
# Cloning Arc/Rc is intentional and explicit; the type communicates shared ownership
clone_on_ref_ptr = "allow"
# Cognitive complexity overlaps with too_many_lines which we already handle
cognitive_complexity = "allow"
# Decimal literals are standard; hex/binary representation not required
decimal_literal_representation = "allow"
# Documentation punctuation style is not enforced
doc_paragraphs_missing_punctuation = "allow"
# Explicit `if/else` returning `Some`/`None` is often clearer than `.then_some()`
if_then_some_else_none = "allow"
# `let _ = expr` is standard for intentionally discarding values
let_underscore_untyped = "allow"
# Default trait method implementations need not always be overridden
missing_trait_methods = "allow"
# Domain types intentionally repeat their module name (e.g. TddError in tdd module)
module_name_repetitions = "allow"
# Multiple inherent impl blocks are used for logical organization
multiple_inherent_impl = "allow"
# Pattern type mismatch: our match patterns are intentionally typed as written
pattern_type_mismatch = "allow"
# `ref` patterns are idiomatic in match arms
ref_patterns = "allow"
# We use `?` and early return, not `.and_then()` chains
return_and_then = "allow"
# Single-use helper functions improve readability and testability
single_call_fn = "allow"
# We use `std` consistently; alloc equivalents would add no value here
std_instead_of_alloc = "allow"
# Struct field patterns with `..` are fine; we don't need all fields named
unneeded_field_pattern = "allow"
# `1u64` style is more readable than `1_u64`
unseparated_literal_suffix = "allow"
# Default numeric fallback (0 as i32) is fine; strong inference makes it non-ambiguous in context
default_numeric_fallback = "allow"
# `#[allow]` attributes must use `#[expect]` instead — enforced to catch stale suppression
allow_attributes = "deny"
# All lint-suppression attributes require a documented reason
allow_attributes_without_reason = "deny"

# ── Panic-family lints ────────────────────────────────────────────────────────
# Currently warn; will be ratcheted to deny in P11 once all violations are fixed.
expect_used = "warn"
unwrap_used = "warn"
