[package]
name = "cfk-engine"
description = "Claude-Factory kernel imperative shell — event store, command runner, forge clients"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cfk-core = { path = "../cfk-core" }
# eventcore + eventcore-sqlite: deferred to M2 (see docs/decisions/0008-m1-hand-rolled-event-log.md)
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
eventcore-types = { workspace = true }
eventcore-fs = { workspace = true }
async-trait = "0.1.89"
reqwest = { version = "0.13.4", features = ["json"] }
globset = "0.4.18"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true }
