[package]
name = "cfk-mcp"
description = "Claude-Factory kernel MCP server — rmcp stdio server exposing cf_* tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cfk_mcp"
path = "src/lib.rs"

[[bin]]
name = "cfk"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
cfk-core = { path = "../cfk-core" }
cfk-engine = { path = "../cfk-engine" }
rmcp = { workspace = true }
rmcp-macros = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono.workspace = true
eventcore-fs = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
